# ClamWrap

./: .gitignore  README.md  clamprog.sh  clamwrap.sh  default_dirs.txt  old_date  pyproject.toml  shell.nix
