[tool.poetry]
name = "clamwrap"
version = "0.1.0"
description = "A clamav wrapper that only scans the files that have changed since the last scan."
authors = ["Alex <adrysdale@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fangfrisch = "^1.4.0"
tqdm = "^4.56.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
